[fix] hide cursor on mobile [edit] change height of page for mobile devices

--- a/assets/css/2025.scss
+++ b/assets/css/2025.scss
@@ -497,3 +497,12 @@ main {
     }
   }
 }
+@media screen and (max-width: 460px) {
+  html,
+  body, main {
+    height: 100%;
+  }
+  #cursor {
+    display: none;
+  }
+}
